# eamcognitive

./: .dockerignore  .env.example  .gitignore  Dockerfile  check_pdi_db.py  debug_jwt.py  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  test_llm_fix.py  test_provider_switch.py
app/: __init__.py  config.py  main.py  start.sh
app/agents/: __init__.py  admisiones.py  base.py  comunicaciones.py  finanzas.py  retencion.py  tic.py
app/api/: __init__.py  websocket.py
app/api/routes/: agents.py  chat.py  hitl.py  memory.py  pdi.py  runs.py
app/core/: __init__.py  checkpointer.py  dsee.py  graph.py  llm.py  state.py  supervisor.py
app/crews/: __init__.py
app/db/: __init__.py  models.py  supabase.py
app/memory/: __init__.py
app/protocols/: __init__.py  genui.py
app/security/: __init__.py  audit.py  hitl.py  zero_trust.py
app/tools/: __init__.py  cartera.py  memory_search.py  okr_alignment.py  sigeam.py  snies.py
migrations/: 001_cognitive_os_tables.sql
